--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   text-align: center;
 }
 
+@import 'bootstrap/dist/css/bootstrap.min.css';
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -13,14 +15,25 @@
   }
 }
 
+.btnAdd {
+  color :black;
+}
+
+.Form {
+  text-align: center;
+  padding-top: 10px;
+}
+
+
+
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(14px + 3vmin);
   color: white;
 }
 
